--- a/slides/intro_notes-2020.html
+++ b/slides/intro_notes-2020.html
@@ -48,14 +48,14 @@
 
 
 <section>
-<section id="slide-orge26edcd">
-<h2 id="orge26edcd">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org872cea5">
+<h2 id="org872cea5">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
 <p class="fragment" data-audio-src="intro/title.ogg"></p>
 
-<button onclick="showCaptions()"><i class="fa fa-closed-captioning"></i></button>
+<button onclick="showCaptions()" font-size="16px"><i class="fa fa-closed-captioning fa-2x"></i></button>
 
 
 
@@ -75,8 +75,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-org0c42dc0" data-audio-src="intro/overview.ogg">
-<h2 id="org0c42dc0">Overview</h2>
+<section id="slide-org099b0ff" data-audio-src="intro/overview.ogg">
+<h2 id="org099b0ff">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Chris Boyle, Umair Jamal, and Tom Stavert</li>
@@ -155,8 +155,8 @@ course.
 </aside>
 
 </section>
-<section id="slide-org4936e8f" data-audio-src="intro/componentsofassessment.ogg">
-<h3 id="org4936e8f">Components of assessment</h3>
+<section id="slide-orgd5f6728" data-audio-src="intro/componentsofassessment.ogg">
+<h3 id="orgd5f6728">Components of assessment</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -230,8 +230,8 @@ semester 2.
 </section>
 </section>
 <section>
-<section id="slide-org6ddf2ee" data-audio-src="intro/keylearningobjectives.ogg">
-<h2 id="org6ddf2ee">Key learning objectives</h2>
+<section id="slide-org59af558" data-audio-src="intro/keylearningobjectives.ogg">
+<h2 id="org59af558">Key learning objectives</h2>
 <ul>
 <li>Problem solving</li>
 <li>Mathematics</li>
@@ -293,8 +293,8 @@ solved analytically.
 </aside>
 
 </section>
-<section id="slide-org85b0ceb" data-audio-src="intro/prerequisites.ogg">
-<h3 id="org85b0ceb">Prerequisites</h3>
+<section id="slide-orgba23f53" data-audio-src="intro/prerequisites.ogg">
+<h3 id="orgba23f53">Prerequisites</h3>
 <ul>
 <li>CP101: Basic Principles in Chemical Engineering</li>
 <li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
@@ -347,8 +347,8 @@ that you are confident that you understand them thoroughly.
 </aside>
 
 </section>
-<section id="slide-orge128406" data-audio-src="intro/schedule.ogg">
-<h3 id="orge128406">Schedule</h3>
+<section id="slide-org5230090" data-audio-src="intro/schedule.ogg">
+<h3 id="org5230090">Schedule</h3>
 <ul>
 <li>Week 1: Python and its applications</li>
 <li>Weeks 2-4: Differential balances</li>
@@ -409,8 +409,8 @@ materials.
 </aside>
 
 </section>
-<section id="slide-org08e3f5c" data-audio-src="intro/learningmaterials.ogg">
-<h3 id="org08e3f5c">Learning resources</h3>
+<section id="slide-org285a171" data-audio-src="intro/learningmaterials.ogg">
+<h3 id="org285a171">Learning resources</h3>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a> 
 <ul>
@@ -457,8 +457,8 @@ whole.
 
 </aside>
 </section>
-<section id="slide-org625997e" data-audio-src="intro/additionalresources.ogg">
-<h3 id="org625997e">Additional resources</h3>
+<section id="slide-org05fc959" data-audio-src="intro/additionalresources.ogg">
+<h3 id="org05fc959">Additional resources</h3>
 <ul>
 <li>Books:
 <ul>
@@ -517,8 +517,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-org6593b96" data-audio-src="intro/questions.ogg">
-<h2 id="org6593b96">Questions?</h2>
+<section id="slide-orge245ab6" data-audio-src="intro/questions.ogg">
+<h2 id="orge245ab6">Questions?</h2>
 <p>
 If you have any questions, please post to the class forum on Myplace
 or email me at leo.lue@strath.ac.uk.
